# bazel_rules_go_custom_comp_bug

./: BUILD.bazel  LICENSE  WORKSPACE  go.mod
proto/: BUILD.bazel  bug.proto
protoc-gen-gogrpcbug/: BUILD.bazel  main.go
