load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bug_proto",
    srcs = ["bug.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "bug_go_proto",
    compilers = ["//protoc-gen-gogrpcbug:go_grpc_bug"],
    importpath = "github.com/asv/bazel_rules_go_custom_comp_bug/proto",
    proto = ":bug_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":bug_go_proto"],
    importpath = "github.com/asv/bazel_rules_go_custom_comp_bug/proto",
    visibility = ["//visibility:public"],
)
